--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -15,7 +15,8 @@
     "DefaultConnection": "Host=aws-0-ap-southeast-1.pooler.supabase.com; Database=DATN; Username=postgres.veibnlwnnuuyyuzopdos; Password=Curin123#"
 
   },
-  "ReactApp": "https://nhatminh.deloydz.com",
+  //"ReactApp": "https://nhatminh.deloydz.com",
+  "ReactApp": "https://movixia.netlify.app",
   //"ReactApp": "http://localhost:5173",
   "profiles": {
     "IIS Express": {
