--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -58,6 +58,11 @@
     "Cancel_url": "https://nhatminh.deloydz.com/thanh-toan/huy",
     "Return_url": "https://nhatminh.deloydz.com/thanh-toan/thanh-cong"
   },
+  "CloudinarySettings": {
+    "CloudName": "dwt4uhpas",
+    "ApiKey": "698233192589521",
+    "ApiSecret": "YsFhGWpfFAD2mWSeLvpcggqhSTY"
+  },
   "TimeZoneId": "SE Asia Standard Time" // If do not us Windown OS change it to: Asia/Bangkok
 
 }
