--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,3 +1,3 @@
 VITE_API_URL= https://datn-hakz.onrender.com/api
 # VITE_API_URL= http://localhost:5285/api
-VITE_API_CHATBOT_URL = https://9f16-2001-ee1-fc24-dc50-f1ce-44ec-5440-9906.ngrok-free.apps
+VITE_API_CHATBOT_URL = https://datn-chatbot.onrender.com
